add up level if a student done all tasks